fix login dialog z-index

--- a/client/components/LoginDialog/index.scss
+++ b/client/components/LoginDialog/index.scss
@@ -5,7 +5,7 @@
     right:0;
     left:0;
     background:rgba(0,0,0,.4);
-    z-index: 1000;
+    z-index: 1002;
 }
 .loginWrapper {
     position: absolute;
